--- a/login.html
+++ b/login.html
@@ -1,8 +1,21 @@
 <html>
 <head>
 <title>Login</title>
+
+<link type="text/css" rel="stylesheet" href="estilo2.css" />
+
 </head>
+
+
+
 <body>
+
+<header>  
+
+        <h1>Trabajo de Ayudantia</h1>
+</header>
+
+
 <form action="login.php" method="POST">
 Usuario: <input type="text" name="user" size="15">
 Contraseña: <input type="password" name="pass" size="15">
